# dialler-ratatui

./: Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  config.rs  contact.rs  db.rs  error.rs  event.rs  lib.rs  line_buffer.rs  main.rs  renderer.rs  tui.rs  ui.rs
src/app/: config.rs  line_buffer.rs  mod.rs
src/data_layer/: contact.rs  db.rs  mod.rs
src/dialog/: dialog_field.rs  mod.rs  modal.rs
