[package]
name = "dialler-rs"
version = "0.1.2"
authors = ["Shane Poppleton <shane@bjja.com.au>"]
description = "A simple dialler / contact manager for the terminal"
repository = "https://github.com/codemonkey76/dialler-rs"
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
derive_more = "0.99.17"
directories = "5.0.1"
futures = "0.3.30"
ratatui = "0.26.0"
rusqlite = "0.30.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
